--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <title>Justin A. Krometis</title>
-<meta name="description" content="A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+<meta name="description" content="Website for Justin Krometis
 ">
 
 <!-- Open Graph -->
@@ -618,7 +618,7 @@
   
 </span>
 
-      <div class="contact-note">You can even add a little note about which of these is the best way to reach you.
+      <div class="contact-note">Contact via email is typically best.
 </div>
     </div>
     
