--- a/projects/1_project/index.html
+++ b/projects/1_project/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <title>Justin A. Krometis | Historical Earthquake Estimation</title>
-<meta name="description" content="A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+<meta name="description" content="Website for Justin Krometis
 ">
 
 <!-- Open Graph -->
