master: tweaks to about.md

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
     
 
     <div class="clearfix">
-      <p>I am a computer and math nerd currently working as Computational Scientist with Advanced Research Computing at Virginia Tech. My research is in development of theoretical and computational frameworks to address a number of data analytics problems, such as how to incorporate and balance data and expert opinion into decision-making, and how to estimate model parameters, including high- or even infinite-dimensional quantities, from noisy data. Areas of interest include: Bayesian Inference, Parameter Estimation, Optimal Control, Uncertainty Quantification, Numerical Analysis, Scientific Computing.</p>
+      <p>I am a computer and math geek currently working as Computational Scientist with Advanced Research Computing at Virginia Tech. My research is in development of theoretical and computational frameworks to address a number of data analytics problems, such as how to incorporate and balance data and expert opinion into decision-making, and how to estimate model parameters, including high- or even infinite-dimensional quantities, from noisy data. Areas of interest include: Bayesian Inference, Parameter Estimation, Optimal Control, Uncertainty Quantification, Numerical Analysis, Scientific Computing, and Machine Learning.</p>
 
-<p>Prior to coming back to academia, I spent seven years in the public and private sectors doing transportation modeling for planning and evacuation modeling; hurricane, pandemic, and other emergency preparedness; and project management.</p>
+<p>Prior to coming back to academia, I spent seven years in the public and private sectors doing transportation modeling for planning and evacuation applications; hurricane, pandemic, and other emergency preparedness; and project management.</p>
 
 <!--
 ## education
