--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
       <span class="contact-icon text-center">
   <a href="mailto:%6A%6B%72%6F%6D%65%74%69%73@%76%74.%65%64%75"><i class="fas fa-envelope"></i></a>
   <a href="https://orcid.org/0000-0002-2862-112X" target="_blank" title="ORCID"><i class="ai ai-orcid"></i></a>
-  
+  <a href="https://scholar.google.com/citations?user=HGbCMrgAAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
   
   
   <a href="https://github.com/krometis" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
@@ -614,7 +614,7 @@
   
   
   
-  <a href="https://www.arc.vt.edu" target="_blank" title="Work"><i class="fas fa-briefcase"></i></a>
+  
   
   
   
