master: updated cv+pubs, add math appointment

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <p>I am a computer and math geek currently working as Research Assistant Professor
 with the <a href="https://www.research.vt.edu/institutes/virginia-tech-national-security-institute.html">National Security
 Institute</a>
-at Virginia Tech. My research is in development of theoretical and
+at Virginia Tech. I also hold an Adjunct Research Assistant Professor position in the <a href="https://math.vt.edu">Math Department</a>. My research is in development of theoretical and
 computational frameworks to address data analytics problems, such
 as how to incorporate and balance data and expert opinion into decision-making,
 and how to estimate model parameters, including high- or even
